# weather-app

./: CMakeLists.txt  README.md  startup.sh
client/: CMakeLists.txt
client/include/: client.hpp
client/src/: client.cpp
ext/poco-1.9.0/: MANIFEST  VERSION  components  config.make
ext/poco-1.9.0/CppUnit/.dep/Linux/x86_64/: CppUnitException.d  TestCase.d  TestDecorator.d  TestFailure.d  TestResult.d  TestRunner.d  TestSuite.d  TextTestResult.d
ext/poco-1.9.0/Encodings/.dep/Linux/x86_64/: DoubleByteEncoding.d  Encodings.d  ISO8859_10Encoding.d  ISO8859_11Encoding.d  ISO8859_13Encoding.d  ISO8859_14Encoding.d  ISO8859_16Encoding.d  ISO8859_3Encoding.d  ISO8859_4Encoding.d  ISO8859_5Encoding.d  ISO8859_6Encoding.d  ISO8859_7Encoding.d  ISO8859_8Encoding.d  ISO8859_9Encoding.d  Windows1253Encoding.d  Windows1254Encoding.d  Windows1255Encoding.d  Windows1256Encoding.d  Windows1257Encoding.d  Windows1258Encoding.d  Windows874Encoding.d  Windows932Encoding.d  Windows936Encoding.d  Windows949Encoding.d  Windows950Encoding.d
ext/poco-1.9.0/Foundation/.dep/Linux/x86_64/: ASCIIEncoding.d  AbstractObserver.d  ActiveDispatcher.d  ArchiveStrategy.d  Ascii.d  AsyncChannel.d  AtomicCounter.d  Base32Decoder.d  Base32Encoder.d  Base64Decoder.d  (+174 more)
ext/poco-1.9.0/lib/Linux/x86_64/: libCppUnit.so.1  libCppUnitd.so.1  libPocoEncodings.so.60  libPocoEncodingsd.so.60  libPocoFoundation.so.60  libPocoJSON.so.60  libPocoJSONd.so.60  libPocoNet.so.60  libPocoUtil.so.60  libPocoXML.so.60
server/: CMakeLists.txt
server/include/: server.hpp
server/src/: server.cpp
src/: server.cpp
(+507 files in other folders)
